--- a/views/post-parts/layout/footer.html.twig
+++ b/views/post-parts/layout/footer.html.twig
@@ -1,22 +1,33 @@
-{% set footer_eu_msmt = site.theme.link ~ '/images/footer/footer-eu-msmt.png' %}
+{% if sidebars.footer_banner|default %}
+    <footer id="footer-banner" class="container mt-5">
+        {{ include('widgets/eu-msmt-widget/eu-msmt-widget.html.twig') }}
+        {# {{ sidebars.footer_banner|default }} #}
+    </footer>
+{% endif %}
 
-<footer id="footer-eu-msmt" class="footer website-footer mt-5 border-top border-info">
-    <div class="container py-4 text-dark">
-        <div class="row align-items-center">
-            <div class="col-12 d-flex flex-column flex-lg-row align-items-center justify-content-between">
-                <div>Tyto webové stránky vznikly za finanční podpory:</div>
-                <img src="{{ footer_eu_msmt }}" alt="Evropské strukturální a investiční fondy a MŠMT" class="footer-eu-msmt-image">
-            </div>
-        </div>
-    </div>
-</footer>
+{% if sidebars.footer_banner_fluid|default %}
+    <footer id="footer-banner-fluid" class="container-fluid mt-5">
+        {{ include('widgets/eu-msmt-widget/eu-msmt-widget.html.twig') }}
+        {# {{ sidebars.footer_banner_fluid|default }} #}
+    </footer>
+{% endif %}
 
-<footer id="footer" class="website-footer bg-primary text-light">
+<footer id="footer-main" class="bg-primary text-light">
     <div class="container p-4">
         <div class="row">
-            <div class="col-12">
+            {% if sidebars.footer_left|default %}
+                <aside class="col-12 col-lg">
+                    {{ sidebars.footer_left|default }}
+                </aside>
+            {% endif %}
+            <aside class="col-12 col-lg">
                 Copyright {{ "now"|date('Y') }}
-            </div>
+            </aside>
+            {% if sidebars.footer_right|default %}
+                <aside class="col-12 col-lg">
+                    {{ sidebars.footer_right|default }}
+                </aside>
+            {% endif %}
         </div>
     </div>
 </footer>
