--- a/views/post-parts/layout/header.html.twig
+++ b/views/post-parts/layout/header.html.twig
@@ -1,10 +1,8 @@
 {% set logo = site.theme.link ~ '/images/logo/prf_katedra-anorganicke-chemie_cz_barva.svg' %}
 
-<!--suppress HtmlUnknownAnchorTarget -->
-<a class="skip-link screen-reader-text d-none" href="#content">{{ _e( 'Skip to content') }}</a>
-
 <header id="header" class="container website-header mt-0 mt-lg-2 mb-3">
     <div class="row justify-content-evenly">
+        {# Logo and (hidden) name/title of website. #}
         <h1 class="col-12 col-md-3 order-1 order-md-0 fs-6 fs-lg-5 py-1 py-lg-2">
             <a href="{{ site.url }}" rel="home" class="d-flex justify-content-center justify-content-lg-start">
                 <span class="d-none">{{ site.name }}</span>
