--- a/views/post-types/search.html.twig
+++ b/views/post-types/search.html.twig
@@ -8,6 +8,6 @@
             {% include 'post-parts/tease-include.html.twig' with {post_type: post.post_type} %}
         {% endfor %}
 
-        {% include 'post-parts/pagination.html.twig' with { pagination: posts.pagination({show_all: false, mid_size: 3, end_size: 2}) } %}
+        {% include 'post-parts/layout/pagination-row.html.twig' with { pagination: posts.pagination({show_all: false, mid_size: 3, end_size: 2}) } %}
     </div>
 {% endblock content %}
