--- a/views/post-types/single-password.html.twig
+++ b/views/post-types/single-password.html.twig
@@ -1,4 +1,4 @@
-{% extends "layouts/default-page.html.twig" %}
+{% extends "layouts/page-layout.html.twig" %}
 
 {% block content %}
     <form class="password-form" action="{{ site.site_url }}/wp-login.php?action=postpass" method="post">
