--- a/views/custom-templates/contact.html.twig
+++ b/views/custom-templates/contact.html.twig
@@ -3,26 +3,25 @@
 {# Page with contacts. #}
 
 {% block page_content %}
-    <main class="container content-wrapper">
-        <article class="post-type-{{ post.post_type }}" id="post-{{ post.ID }}">
-            {% include 'post-parts/page-banner-header-row.html.twig' with {image: post.thumbnail, title: post.title} %}
-            <div class="row post-type-{{ post.post_type }}" id="post-{{ post.ID }}">
-                {% if post.content %}
-                    <section class="col-12">
-                        {{ post.content }}
-                    </section>
-                {% endif %}
-                <section class="col-12 col-lg-6">
-                    {% for singleContact in contacts %}
-                        {% include 'post-parts/contact/contact-organization.html.twig' %}
-                    {% endfor %}
-                </section>
-                <section class="col-12 col-lg-6">
-                    {% for department in departments %}
-                        {% include 'post-parts/contact/contact-department.html.twig' %}
-                    {% endfor %}
-                </section>
-            </div>
-        </article>
-    </main>
+    <section class="post-type-{{ post.post_type }}" id="post-{{ post.ID }}">
+        {% include 'post-parts/layout/main-banner-row.html.twig'
+            with {image: post.thumbnail, title: post.title} %}
+        <div class="row post-type-{{ post.post_type }}" id="post-{{ post.ID }}">
+            {% if post.content|default %}
+                <article class="col-12">
+                    {{ post.content }}
+                </article>
+            {% endif %}
+            <section class="col-12 col-lg-6">
+                {% for singleContact in contacts %}
+                    {% include 'post-parts/contact/contact-organization.html.twig' %}
+                {% endfor %}
+            </section>
+            <section class="col-12 col-lg-6">
+                {% for department in departments %}
+                    {% include 'post-parts/contact/contact-department.html.twig' %}
+                {% endfor %}
+            </section>
+        </div>
+    </section>
 {% endblock page_content %}
