--- a/views/custom-templates/periodical-table.html.twig
+++ b/views/custom-templates/periodical-table.html.twig
@@ -8,7 +8,7 @@ This page theme can be selected as custom theme of single "page" type post (due 
 {% set periodicalTable = site.theme.link ~ '/images/others/periodical-table.png' %}
 
 {% block body_content %}
-    <div class="container content-wrapper my-5">
+    <main class="container content-wrapper my-5">
         {% block periodical_table %}
             <div class="row post-type-{{ post.post_type }}" id="post-{{ post.ID }}">
                 <div class="col-12">
@@ -16,7 +16,7 @@ This page theme can be selected as custom theme of single "page" type post (due 
                 </div>
             </div>
         {% endblock periodical_table %}
-    </div>
+    </main>
     <div class="container-fluid my-5">
         {{ block('periodical_table') }}
     </div>
