--- a/views/page-customs/page-plugin.html.twig
+++ b/views/page-customs/page-plugin.html.twig
@@ -1,4 +1,4 @@
-{% extends "layouts/default-page.html.twig" %}
+{% extends "layouts/page-layout.html.twig" %}
 
 {% block content %}
     <div class="container content-wrapper">
