--- a/views/post-parts/layout/pagination-row.html.twig
+++ b/views/post-parts/layout/pagination-row.html.twig
@@ -1,5 +1,5 @@
 {% if posts.pagination.pages is not empty %}
-    <nav class="pagination-block">
+    <nav class="row pagination-block">
         <ul class="pagination">
 
             {# First #}
