--- a/views/post-parts/layout/signpost.html.twig
+++ b/views/post-parts/layout/signpost.html.twig
@@ -1,21 +1,21 @@
 {% if posts|default and posts|length > 0 %}
-    <nav class="container">
-        <div class="row m-3 g-5 justify-content-md-center">
+    <nav class="row m-3 g-5 justify-content-md-center">
+        <section>
             {% for post in posts %}
-                <div class="col-12 col-md-6 col-lg-4">
+                <article class="col-12 col-md-6 col-lg-4">
                     <a class="card signpost-card border-0 h-100 text-dark text-decoration-none" href="{{ post.path }}">
                         {% if post.meta('_menu_image')|default %}
                             <img src="{{ get_image(post.meta('_menu_image')).src }}"
                                  class="card-img-top mx-auto mt-4"
-                                 alt="{{ post.title }}" />
+                                 alt="{{ post.title }}"/>
                         {% endif %}
                         <div class="card-body d-flex flex-column justify-content-start">
                             <h5 class="card-title">{{ post.title }}</h5>
                             <p class="card-text">{{ post.post_excerpt }}</p>
                         </div>
                     </a>
-                </div>
+                </article>
             {% endfor %}
-        </div>
+        </section>
     </nav>
 {% endif %}
