--- a/views/layouts/page-layout.html.twig
+++ b/views/layouts/page-layout.html.twig
@@ -1,5 +1,5 @@
 {#
-DEFAULT PAGE TEMPLATE - Used (directly or by inheritance) by every other page on website.
+DEFAULT PAGE TEMPLATE - Used (directly or through inheritance) by every other page on website.
 #}
 {%- set html_lang = language|default(site.language|default('cs-CZ')) -%}
 {%- set title = title|default(site.name|default) -%}
