--- a/views/post-parts/layout/signpost.html.twig
+++ b/views/post-parts/layout/signpost.html.twig
@@ -1,6 +1,6 @@
 {% if posts|default and posts|length > 0 %}
     <nav>
-        <section class="row m-3 mb-5 g-5 justify-content-md-center">
+        <section class="row mt-3 mb-5 g-5 justify-content-md-center">
             {% for post in posts %}
                 <article class="col-12 col-md-6 col-lg-4">
                     <a class="card signpost-card border-0 h-100 text-dark text-decoration-none" href="{{ post.path }}">
