--- a/views/post-parts/layout/signpost-item.html.twig
+++ b/views/post-parts/layout/signpost-item.html.twig
@@ -7,7 +7,7 @@
         {% endif %}
         <div class="card-body d-flex flex-column justify-content-start">
             <h5 class="card-title">{{ post.title }}</h5>
-            <p class="card-text">{{ post.post_excerpt }}</p>
+            <p class="card-text text-justify">{{ post.post_excerpt }}</p>
         </div>
     </a>
 </article>
