--- a/views/post-parts/layout/signpost.html.twig
+++ b/views/post-parts/layout/signpost.html.twig
@@ -2,25 +2,7 @@
     <nav>
         <section class="row mt-3 mb-5 g-5 justify-content-md-center">
             {% for post in posts %}
-                <article class="col-12 col-md-6 col-lg-4">
-                    <a class="card signpost-card border-0 h-100 text-dark text-decoration-none"
-                       href="{{ post.path }}">
-                        {% if post.meta('_menu_image')|default %}
-                            <div class="ratio ratio-16x9 card-img-top mx-auto mt-4">
-                                <img src="{{ get_image(post.meta('_menu_image')).src }}"
-                                     class=""
-                                     alt="{{ post.title }}"/>
-                            </div>
-                        {% endif %}
-                        {% set classes = post.meta('_menu_image')|default
-                            ? 'justify-content-start'
-                            : 'justify-content-center align-items-center pt-5' %}
-                        <div class="card-body d-flex flex-column {{ classes }}">
-                            <h5 class="card-title">{{ post.title }}</h5>
-                            <p class="card-text">{{ post.post_excerpt }}</p>
-                        </div>
-                    </a>
-                </article>
+                {% include 'post-parts/layout/signpost-item.html.twig' %}
             {% endfor %}
         </section>
     </nav>
