--- a/views/post-parts/layout/footer.html.twig
+++ b/views/post-parts/layout/footer.html.twig
@@ -13,19 +13,21 @@
 <footer id="footer-main" class="bg-primary text-light">
     <div class="container p-4">
         <div class="row">
-            {% if sidebars.footer_left|default %}
-                <aside class="col-12 col-lg">
-                    {{ sidebars.footer_left|default }}
-                </aside>
-            {% endif %}
             <aside class="col-12 col-lg">
-                Copyright {{ "now"|date('Y') }}
+                {% if sidebars.footer_left|default %}
+                    {{ sidebars.footer_left|default }}
+                {% endif %}
             </aside>
-            {% if sidebars.footer_right|default %}
-                <aside class="col-12 col-lg">
+            <aside class="col-12 col-lg">
+                {% if sidebars.footer_center|default %}
+                    {{ sidebars.footer_center|default }}
+                {% endif %}
+            </aside>
+            <aside class="col-12 col-lg">
+                {% if sidebars.footer_right|default %}
                     {{ sidebars.footer_right|default }}
-                </aside>
-            {% endif %}
+                {% endif %}
+            </aside>
         </div>
     </div>
 </footer>
