--- a/theme/styles/main.scss
+++ b/theme/styles/main.scss
@@ -75,6 +75,12 @@ $rfs-base-value: 0.8rem;
   }
 }
 
+.text-light {
+  a {
+    color: $light;
+  }
+}
+
 .text-justify {
   text-align: justify !important;
 }
