--- a/theme/styles/main.scss
+++ b/theme/styles/main.scss
@@ -65,7 +65,6 @@ $rfs-base-value: 0.8rem;
     a {
       color: $dark;
       font-weight: bolder;
-      text-decoration: none;
       transition: color 500ms;
 
       &:hover {
@@ -73,6 +72,10 @@ $rfs-base-value: 0.8rem;
       }
     }
   }
+}
+
+a {
+  text-decoration: none;
 }
 
 .text-light {
