--- a/views/post-types/index.html.twig
+++ b/views/post-types/index.html.twig
@@ -1,24 +1,1 @@
-{% extends "layouts/page-layout.html.twig" %}
-
-{% block page_content %}
-    <article class="post-type-{{ post.post_type }}" id="post-{{ post.ID }}">
-        {% block article_header %}
-            {% include 'post-parts/layout/main-banner-row.html.twig' with {image: post.thumbnail, title: post.title} %}
-        {% endblock article_header %}
-        {% block article_content %}
-            {% if content and content|length > 0 %}
-                <div class="row mx-3">
-                    <div class="col-12">
-                        {{ post.content }}
-                    </div>
-                </div>
-            {% endif %}
-        {% endblock article_content %}
-        {% block article_signpost %}
-            {% set subPosts = posts|default and posts|length > 0 ? posts : post.children %}
-            {% include 'post-parts/layout/signpost.html.twig' with {posts: subPosts} %}
-            {% include 'post-parts/layout/pagination-row.html.twig'
-                with { pagination: subPosts.pagination({show_all: false, mid_size: 3, end_size: 2}) } %}
-        {% endblock article_signpost %}
-    </article>
-{% endblock page_content %}
+{% extends "post-types/page.html.twig" %}
