--- a/views/post-types/archive.html.twig
+++ b/views/post-types/archive.html.twig
@@ -1,6 +1,1 @@
-{# This file demonstrates using most of the index.twig template and modifying
-   just a small part. See `search.twig` for an example of another approach #}
-
-{% block content %}
-    <h3>This is my archive</h3>
-{% endblock %}
+{% extends "post-types/page.html.twig" %}
