--- a/views/post-types/contact_person.html.twig
+++ b/views/post-types/contact_person.html.twig
@@ -1,6 +1,6 @@
 {% extends "post-types/page.html.twig" %}
 
-{% block content %}
+{% block page_content %}
     <section class="row my-3">
         <div class="col-12">
             <h3>Kontaktní údaje</h3>
@@ -23,4 +23,4 @@
             {{ post.content }}
         </div>
     </section>
-{% endblock content %}
+{% endblock page_content %}
