--- a/views/custom-templates/industry-materials.html.twig
+++ b/views/custom-templates/industry-materials.html.twig
@@ -2,7 +2,7 @@
 
 {# Page with list of industry materials. #}
 
-s{% block article_content %}
+{% block article_content %}
     {% if (post.content|default and post.content|length > 0) or (content|default and content|length > 0) %}
         <section class="row my-3">
             <div class="col-12">
