--- a/views/post-parts/layout/signpost-item.html.twig
+++ b/views/post-parts/layout/signpost-item.html.twig
@@ -11,8 +11,8 @@
         {% set classes = post.meta('_menu_image')|default
             ? 'justify-content-start'
             : 'justify-content-center align-items-center pt-5' %}
-        <div class="card-body d-flex flex-column px-4 {{ classes }}">
-            <h5 class="card-title mx-3">{{ post.title }}</h5>
+        <div class="card-body d-flex flex-column {{ classes }}">
+            <h5 class="card-title">{{ post.title }}</h5>
             <p class="card-text">{{ post.post_excerpt }}</p>
         </div>
     </a>
