--- a/views/post-parts/layout/signpost-item.html.twig
+++ b/views/post-parts/layout/signpost-item.html.twig
@@ -12,8 +12,8 @@
             ? 'justify-content-start'
             : 'justify-content-center align-items-center pt-5' %}
         <div class="card-body d-flex flex-column {{ classes }}">
-            <h5 class="card-title">{{ post.title }}</h5>
-            <p class="card-text">{{ post.post_excerpt }}</p>
+            <h5 class="card-title text-center">{{ post.title }}</h5>
+            <p class="card-text mt-auto" style="text-align: justify;">{{ post.post_excerpt }}</p>
         </div>
     </a>
 </article>
