--- a/views/post-parts/layout/signpost-item.html.twig
+++ b/views/post-parts/layout/signpost-item.html.twig
@@ -12,8 +12,12 @@
             ? 'justify-content-start'
             : 'justify-content-center align-items-center pt-5' %}
         <div class="card-body d-flex flex-column {{ classes }}">
-            <h5 class="card-title text-center">{{ post.title }}</h5>
-            <p class="card-text mt-auto" style="text-align: justify;">{{ post.post_excerpt }}</p>
+            <h5 class="card-title" style="{{ post.post_excerpt|default|length > 0 ? '' : 'text-center' }}">
+                {{ post.title }}
+            </h5>
+            <p class="card-text {{ post.post_excerpt|default|length > 0 ? 'mt-auto' : '' }}" style="text-align: justify;">
+                {{ post.post_excerpt }}
+            </p>
         </div>
     </a>
 </article>
