--- a/views/layouts/page-layout.html.twig
+++ b/views/layouts/page-layout.html.twig
@@ -9,6 +9,7 @@ DEFAULT PAGE TEMPLATE - Used (directly or through inheritance) by every other pa
 <!--[if gt IE 9]><!-->
 <html class="no-js no-svg" {{ site.language_attributes }} prefix="og: http://ogp.me/ns#">
 <!--<![endif]-->
+<!--suppress HtmlRequiredTitleElement -->
 <head>
     <meta charset="{{ site.charset|default('utf-8') }}">
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
