--- a/views/post-parts/layout/signpost-item.html.twig
+++ b/views/post-parts/layout/signpost-item.html.twig
@@ -3,19 +3,15 @@
        href="{{ post.path }}">
         {% if post.meta('_menu_image')|default %}
             <div class="ratio ratio-16x9 card-img-top mx-auto mt-4">
-                <img src="{{ get_image(post.meta('_menu_image')).src }}"
-                     class=""
-                     alt="{{ post.title }}"/>
+                <img src="{{ get_image(post.meta('_menu_image')).src }}" alt="{{ post.title }}"/>
             </div>
         {% endif %}
-        {% set classes = post.meta('_menu_image')|default
-            ? 'justify-content-start'
-            : 'justify-content-center align-items-center pt-5' %}
+        {% set classes = post.meta('_menu_image')|default ? 'justify-content-start': 'justify-content-center align-items-center pt-5' %}
         <div class="card-body d-flex flex-column {{ classes }}">
             <h5 class="card-title" style="{{ post.post_excerpt|default|length > 0 ? '' : 'text-center' }}">
                 {{ post.title }}
             </h5>
-            <p class="card-text {{ post.post_excerpt|default|length > 0 ? 'mt-auto' : '' }}" style="text-align: justify;">
+            <p class="small card-text {{ post.post_excerpt|default|length > 0 ? 'mt-auto' : '' }}" style="text-align: justify;">
                 {{ post.post_excerpt }}
             </p>
         </div>
