--- a/theme/styles/main.scss
+++ b/theme/styles/main.scss
@@ -2,6 +2,7 @@ $rfs-base-value: 0.8rem;
 
 @import "bootstrap-up";
 @import "interactive-periodical-table";
+@import "~swiper/swiper-bundle.min.css";
 
 .footer-eu-msmt-image {
   max-height: 6em;
