--- a/views/custom-templates/interactive-industry-map.html.twig
+++ b/views/custom-templates/interactive-industry-map.html.twig
@@ -11,14 +11,22 @@
                 <div class="ratio ratio-21x9">
                     {% apply shortcodes %}
                         [leaflet-map]
-                        [leaflet-marker
-                            lat=49.591796708243166
-                            lng=17.027091979980472
-                            iconUrl="https://i.imgur.com/Q54ueuO.png"
-                            iconSize="80,50"
-                            iconAnchor="40,60"]
+{#                        {% for company in companies %}#}
+{#                            {% for location in company.location %}#}
+{#                                <!-- MARKER: {{ location }} -->#}
+{#                        [leaflet-marker#}
+{#                            lat=49.591796708243166#}
+{#                            lng=17.027091979980472#}
+{#                            iconUrl="https://i.imgur.com/Q54ueuO.png"#}
+{#                            iconSize="80,50"#}
+{#                            iconAnchor="40,60"]#}
+{#                                {% endfor %}#}
+{#                        {% endfor %}#}
                     {% endapply %}
                 </div>
+            </section>
+            <section class="col-12">
+                {{ dump(companies) }}
             </section>
             <section class="col-12">
                 {{ post.content }}
