--- a/views/custom-templates/interactive-industry-map.html.twig
+++ b/views/custom-templates/interactive-industry-map.html.twig
@@ -27,7 +27,7 @@
             </section>
             {% for company in companies %}
                 <section class="col-12">
-                    {{ dump(company) }}
+                    {{ dump(company.activities) }}
                 </section>
             {% endfor %}
             <section class="col-12">
