--- a/views/custom-templates/interactive-industry-map.html.twig
+++ b/views/custom-templates/interactive-industry-map.html.twig
@@ -11,25 +11,20 @@
                 <div class="ratio ratio-21x9">
                     {% apply shortcodes %}
                         [leaflet-map]
-{#                        {% for company in companies %}#}
-{#                            {% for location in company.location %}#}
-{#                                <!-- MARKER: {{ location }} -->#}
-{#                        [leaflet-marker#}
-{#                            lat=49.591796708243166#}
-{#                            lng=17.027091979980472#}
-{#                            iconUrl="https://i.imgur.com/Q54ueuO.png"#}
-{#                            iconSize="80,50"#}
-{#                            iconAnchor="40,60"]#}
-{#                                {% endfor %}#}
-{#                        {% endfor %}#}
+                        {% for company in companies %}
+                            {% for location in company.locations %}
+                                <!-- MARKER: {{ location.name }} -->
+                                [leaflet-marker
+                                lat={{ location.latitude }}
+                                lng={{ location.longitude }}
+                                iconUrl="https://i.imgur.com/Q54ueuO.png"
+                                iconSize="80,50"
+                                iconAnchor="40,60"]
+                            {% endfor %}
+                        {% endfor %}
                     {% endapply %}
                 </div>
             </section>
-            {% for company in companies %}
-                <section class="col-12">
-                    {{ dump(company.activities) }}
-                </section>
-            {% endfor %}
             <section class="col-12">
                 {{ post.content }}
             </section>
